objects/Opportunity_Program__c.object
<CustomObject>
    <fields>
        <fullName>Total_Program_Value__c</fullName>
        <description>The Opportunity Total Program Value</description>
        <formula>Opportunity__r.Total_Program_Value__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Total Program Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wafer_Size__c</fullName>
        <description>The Opportunity Wafer Size field.</description>
        <formula>Opportunity__r.Wafer_Size__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Wafer Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Product_TO_Date__c</fullName>
        <description>The Opportunity 1st Product TO Date</description>
        <formula>Opportunity__r.X1st_Product_TO_Date__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>1st Product TO Date (DW)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Years_of_Production_DW__c</fullName>
        <description>The Opportunity Years of Production field.</description>
        <formula>Opportunity__r.Years_of_Production__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Years of Production (DW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Program</label>
    <listViews>
        <fullName>All_Opportunity_Programs</fullName>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Target_Process_Node__c</columns>
        <columns>Project_Health__c</columns>
        <columns>Tapeout_Type__c</columns>
        <columns>Target_TO_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunity Programs</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Programs</pluralLabel>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <description>The purpose of this record type is to make all fields read only on the page layout. Opportunity Program will be set to ‘Read Only’ when the related Opportunity record is set to ‘Void’.</description>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Opportunity_Program_Team__c</fullName>
        <label>Opportunity Program Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>Oppty_Program_Name_cannot_be_changed</fullName>
        <active>false</active>
        <errorConditionFormula>if(Opportunity__r.Name != Name,true,false)</errorConditionFormula>
        <errorMessage>Project Name is the same as the Opportunity Name. It can not be edited in the Opportunity Program. It can only be changed by changing the Opportunity Name</errorMessage>
    </validationRules>
</CustomObject>